--- a/package.json
+++ b/package.json
@@ -21,30 +21,31 @@
     "url": "git+https://github.com/merlinofcha0s/generator-jhipster-flutter.git"
   },
   "dependencies": {
-    "chalk": "2.4.1",
-    "eslint-config-airbnb": "17.1.0",
+    "chalk": "4.1.0",
+    "eslint-config-airbnb": "18.1.0",
     "generator-jhipster": ">=6.0.0",
-    "jhipster-core": "7.2.1",
-    "lodash": "4.17.13",
-    "mkdirp": "0.5.1",
-    "pluralize": "7.0.0",
-    "prettier": "1.13.5",
-    "randexp": "0.4.9",
-    "shelljs": "0.8.2"
+    "jhipster-core": "7.3.2",
+    "semver": "7.3.2",
+    "lodash": "4.17.15",
+    "mkdirp": "1.0.4",
+    "pluralize": "8.0.0",
+    "prettier": "2.0.5",
+    "randexp": "0.5.3",
+    "shelljs": "0.8.4"
   },
   "devDependencies": {
-    "chai": "4.1.2",
-    "ejs-lint": "0.3.0",
-    "eslint": "5.14.0",
-    "eslint-config-airbnb-base": "13.0.0",
-    "eslint-plugin-import": "2.12.0",
-    "fs-extra": "6.0.1",
-    "inquirer": "7.0.4",
-    "jsdoc": "3.6.3",
-    "mocha": "5.2.0",
-    "sinon": "6.0.0",
+    "chai": "4.2.0",
+    "ejs-lint": "1.1.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-plugin-import": "2.21.2",
+    "fs-extra": "9.0.1",
+    "inquirer": "7.1.0",
+    "jsdoc": "3.6.4",
+    "mocha": "8.0.1",
+    "sinon": "9.0.2",
     "yeoman-assert": "3.1.1",
-    "yeoman-test": "2.2.0"
+    "yeoman-test": "2.6.0"
   },
   "resolutions": {
     "inquirer": "7.0.4"
