--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-jhipster-flutter-merlin",
   "version": "1.1.2",
-  "description": "A Flutter blueprint for JHipster. It will use Flutter as the frontend",
+  "description": "A Flutter module for JHipster. It will use Flutter as the frontend",
   "keywords": [
     "yeoman-generator",
     "jhipster-module",
@@ -9,7 +9,7 @@
   ],
   "homepage": "https://github.com/merlinofcha0s/generator-jhipster-flutter.git",
   "author": {
-    "name": "merlinofchaos",
+    "name": "Cyril Casaucau",
     "url": "https://github.com/merlinofcha0s"
   },
   "files": [
