--- a/test/templates/entity-i18n/pubspec.yaml
+++ b/test/templates/entity-i18n/pubspec.yaml
@@ -1,5 +1,5 @@
-name: <%= baseName %>
-description: <%= baseName %> flutter project.
+name: employeeMobile
+description: employeeMobile flutter project.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,17 +19,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-<%_ if (enableTranslation) { _%>
   flutter_localizations:
     sdk: flutter
-<%_ } _%>
   cupertino_icons: 0.1.3
+  provider: 4.1.3+1
   http: 0.12.1
-  dart_json_mapper: 1.5.18
+  dart_json_mapper: 1.5.16
   dart_json_mapper_flutter: 1.0.0
   flutter_secure_storage: 3.3.3
   url_launcher: 5.4.11
-  datetime_picker_formfield: 1.0.0
 
   #BLoC pattern related
   formz: 0.2.0
@@ -81,7 +79,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-<%_ if (enableTranslation) { _%>
 flutter_intl:
   enabled: true
-<%_ } _%>
