--- a/test/templates/entity/pubspec.yaml
+++ b/test/templates/entity/pubspec.yaml
@@ -1,5 +1,5 @@
-name: employeeMobile
-description: employeeMobile flutter project.
+name: employeemgt
+description: employeemgt flutter project.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -14,30 +14,30 @@ description: employeeMobile flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 < 3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: 0.1.3
-  provider: 4.1.3+1
-  http: 0.12.1
-  dart_json_mapper: 1.5.16
-  dart_json_mapper_flutter: 1.0.0
-  flutter_secure_storage: 3.3.3
-  url_launcher: 5.4.11
+  cupertino_icons: 1.0.0
+  http: 0.12.2
+  dart_json_mapper: 1.6.3
+  dart_json_mapper_flutter: 1.0.2
+  flutter_secure_storage: 3.3.5
+  url_launcher: 5.7.2
+  datetime_picker_formfield: 1.0.0
 
   #BLoC pattern related
-  formz: 0.2.0
-  equatable: 1.2.2
-  flutter_bloc: 5.0.1
+  formz: 0.3.2
+  equatable: 1.2.5
+  flutter_bloc: 6.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 1.10.0
+  build_runner: 1.10.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
